[gd_scene format=3]

[ext_resource type="Script" path="res://UI/pause_screen.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://be85l0hqahuhe" path="res://UI/Fonts/ChicagoFLF.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
bg_color = Color(0.0, 0.3, 0.15, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0, 0.85, 0.42, 0.7)
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
bg_color = Color(0.0, 0.35, 0.18, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0, 0.85, 0.42, 0.7)
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_focus"]
bg_color = Color(0.0, 0.4, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0, 1.0, 0.5, 1.0)
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -160.0
offset_right = 200.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="RichTextLabel" parent="Content"]
layout_mode = 2
bbcode_enabled = true
text = "[center][color=#00ff66][font_size=36]PAUSED[/font_size][/color][/center]"
fit_content = true
scroll_active = false
theme_override_fonts/normal_font = ExtResource("2_font")

[node name="ResumeButton" type="Button" parent="Content"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../ControlsButton")
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.0, 1.0, 0.4, 1.0)
theme_override_colors/font_hover_color = Color(0.0, 1.0, 0.5, 1.0)
theme_override_colors/font_pressed_color = Color(0.0, 1.0, 0.4, 1.0)
theme_override_colors/font_focus_color = Color(0.0, 1.0, 0.5, 1.0)
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/focus = SubResource("StyleBoxFlat_btn_focus")
text = "[ESC] Resume"

[node name="ControlsButton" type="Button" parent="Content"]
layout_mode = 2
focus_neighbor_top = NodePath("../ResumeButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.0, 1.0, 0.4, 1.0)
theme_override_colors/font_hover_color = Color(0.0, 1.0, 0.5, 1.0)
theme_override_colors/font_pressed_color = Color(0.0, 1.0, 0.4, 1.0)
theme_override_colors/font_focus_color = Color(0.0, 1.0, 0.5, 1.0)
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/focus = SubResource("StyleBoxFlat_btn_focus")
text = "[C] Controls"

[node name="QuitButton" type="Button" parent="Content"]
layout_mode = 2
focus_neighbor_top = NodePath("../ControlsButton")
focus_neighbor_bottom = NodePath("../ResumeButton")
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.0, 1.0, 0.4, 1.0)
theme_override_colors/font_hover_color = Color(0.0, 1.0, 0.5, 1.0)
theme_override_colors/font_pressed_color = Color(0.0, 1.0, 0.4, 1.0)
theme_override_colors/font_focus_color = Color(0.0, 1.0, 0.5, 1.0)
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/focus = SubResource("StyleBoxFlat_btn_focus")
text = "[Q] Quit to Menu"

[node name="ConfirmHint" type="RichTextLabel" parent="Content"]
visible = false
layout_mode = 2
bbcode_enabled = true
text = "[center][color=#88ff88][Y] Yes     [N] No[/color][/center]"
fit_content = true
scroll_active = false
theme_override_fonts/normal_font = ExtResource("2_font")
theme_override_font_sizes/normal_font_size = 20

[node name="ControlsList" type="RichTextLabel" parent="Content"]
visible = false
layout_mode = 2
bbcode_enabled = true
text = "[color=#88ff88]Gameplay[/color]

[table=2]
[cell][color=#ffe633]A[/color] [color=#b333ff]S[/color] [color=#4d80ff]D[/color] [color=#ff3333]F[/color]   [/cell][cell][color=#aaaaaa]Toggle bits[/color][/cell]
[cell][color=#00ff66]Tab / Shift[/color]   [/cell][cell][color=#aaaaaa]Switch OR / AND[/color][/cell]
[cell][color=#00ff66]Space[/color]   [/cell][cell][color=#aaaaaa]Submit mask[/color][/cell]
[cell][color=#00ff66]Z[/color]   [/cell][cell][color=#aaaaaa]Toggle zoom[/color][/cell]
[/table]

[color=#88ff88]Debug[/color]

[table=2]
[cell][color=#00ff66]N[/color]   [/cell][cell][color=#aaaaaa]Next level[/color][/cell]
[cell][color=#00ff66]P[/color]   [/cell][cell][color=#aaaaaa]Previous level[/color][/cell]
[cell][color=#00ff66]Shift+R[/color]   [/cell][cell][color=#aaaaaa]Restart game[/color][/cell]
[/table]"
fit_content = true
scroll_active = false
theme_override_fonts/normal_font = ExtResource("2_font")
theme_override_font_sizes/normal_font_size = 20

[node name="BackHint" type="RichTextLabel" parent="Content"]
visible = false
layout_mode = 2
bbcode_enabled = true
text = "[center][color=#88ff88][ESC] Back[/color][/center]"
fit_content = true
scroll_active = false
theme_override_fonts/normal_font = ExtResource("2_font")
theme_override_font_sizes/normal_font_size = 18

[connection signal="pressed" from="Content/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Content/ControlsButton" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Content/QuitButton" to="." method="_on_quit_pressed"]
